# LoIK

./: .cmake-format.yaml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pixi.toml
.github/workflows/: macos-linux-windows-conda.yml
bench/: CMakeLists.txt  timings.cpp
include/loik/: fwd.hpp  ik-id-description-optimized.hpp  ik-id-description.hpp  loik-loid-data-optimized.hpp  loik-loid-data-optimized.hxx  loik-loid-data-optimized.txx  loik-loid-data.hpp  loik-loid-data.hxx  loik-loid-data.txx  loik-loid-optimized.hpp  loik-loid-optimized.hxx  loik-loid-optimized.txx  loik-loid.hpp  loik-loid.hxx  loik-loid.txx  macros.hpp  task-solver-base.hpp
problems/: CMakeLists.txt  panda_problems.json  problem-utils.cpp  problem-utils.hpp  romeo_problems.json  talos_problems.json
scripts/: activation.bat  activation_clang.bat
src/: loik-loid-data-optimized.cpp  loik-loid-data.cpp  loik-loid-optimized.cpp  loik-loid.cpp
tests/: CMakeLists.txt  loik-extended.cpp  loik-loid-data.cpp  loik-loid.cpp
